# ai-ops-auto-remediation-platform

./: README.md  pyproject.toml
src/: __init__.py  main.py  models.py  store.py
tests/: test_smoke.py
