[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ops-auto-remediation-platform"
version = "0.1.0"
description = "AI Ops and auto-remediation platform with alert evaluation and recommendations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
